--- a/config.json
+++ b/config.json
@@ -3,16 +3,16 @@
     "theme": {
       "colors": {
         "primary": {
-          "050": "#E3F9E5",
-          "100": "#C1EAC5",
-          "200": "#A3D9A5",
-          "300": "#7BC47F",
-          "400": "#57AE5B",
-          "500": "#3F9142",
-          "600": "#2F8132",
-          "700": "#207227",
-          "800": "#0E5814",
-          "900": "#05400A"
+          "050": "#77ACE4",
+          "100": "#66A1E1",
+          "200": "#5597DD",
+          "300": "#448CDA",
+          "400": "#3382D7",
+          "500": "#2878CC",
+          "600": "#256EBB",
+          "700": "#2264AA",
+          "800": "#1E5A99",
+          "900": "#1B5088"
         },
         "neutrals": {
           "000": "#FFFFFF",
